--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -44,4 +44,21 @@ p{
     display: none;
 }
 
+.preloader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    background: rgb(23, 22, 22,0.3);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    transition: opacity 0.3s linear;
+}
 
+.loader{
+    position: relative;
+    left: 10%;
+}
